--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,11 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="flexbox-01">
-                <!-- flexbox-01 -->
+                <div class="flexbox-container">
+                  <p>A</p>
+                  <p>B</p>
+                  <p>C</p>
+                </div>
               </div>
             </div>
             <div class="l-col-6">
@@ -44,7 +48,11 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="flexbox-02">
-                <!-- flexbox-02 -->
+                <div class="flexbox-container">
+                  <p>A</p>
+                  <p>B</p>
+                  <p>C</p>
+                </div>
               </div>
             </div>
             <div class="l-col-6">
@@ -56,7 +64,11 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="flexbox-03">
-                <!-- flexbox-03 -->
+                <div class="flexbox-container">
+                  <p>A</p>
+                  <p>B</p>
+                  <p>C</p>
+                </div>
               </div>
             </div>
             <div class="l-col-6">
@@ -68,6 +80,11 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="flexbox-04">
+                <div class="flexbox-container">
+                  <p>A</p>
+                  <p>B</p>
+                  <p>C</p>
+                </div>
                 <!-- flexbox-04 -->
               </div>
             </div>
@@ -80,6 +97,11 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="flexbox-05">
+                <div class="flexbox-container">
+                  <p>A</p>
+                  <p>B</p>
+                  <p>C</p>
+                </div>
                 <!-- flexbox-05 -->
               </div>
             </div>
@@ -91,7 +113,12 @@
           </div>
           <div class="l-row">
             <div class="l-col-6">
-              <div class="l-exercice" id="flexbox-01">
+              <div class="l-exercice" id="flexbox-06">
+                <div class="flexbox-container">
+                  <p>A</p>
+                  <p>B</p>
+                  <p>C</p>
+                </div>
                 <!-- flexbox-06 -->
               </div>
             </div>
@@ -113,6 +140,13 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="bootstrap-01">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-4">A</div>
+                    <div class="col-4">B</div>
+                    <div class="col-4">C</div>
+                  </div>
+                </div>
                 <!-- bootstrap-01 -->
               </div>
             </div>
@@ -125,6 +159,13 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="bootstrap-02">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-6">A</div>
+                    <div class="col-3">B</div>
+                    <div class="col-3">C</div>
+                  </div>
+                </div>
                 <!-- bootstrap-02 -->
               </div>
             </div>
@@ -137,6 +178,13 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="bootstrap-03">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm-12 col-md-6">A</div>
+                    <div class="col-sm-12 col-md-6">B</div>
+                    <div class="col-sm-12 col-md-12">C</div>
+                  </div>
+                </div>
                 <!-- bootstrap-03 -->
               </div>
             </div>
@@ -152,6 +200,20 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="bootstrap-04">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm-12 col-md-4">A</div>
+                    <div class="col-sm-12 col-md-8">
+                      B
+                      <div class="row">
+                        <div class="col-sm-12 col-md-6">B1</div>
+                        <div class="col-sm-12 col-md-6">B2</div>
+                        <div class="col-sm-12 col-md-6">B3</div>
+                        <div class="col-sm-12 col-md-6">B4</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <!-- bootstrap-04 -->
               </div>
             </div>
@@ -173,6 +235,9 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="positions-01">
+                <div class="element">1</div>
+                <div class="relative-element">2</div>
+                <div class="element">3</div>
                 <!-- positions-01 -->
               </div>
             </div>
@@ -186,6 +251,11 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="positions-02">
+                <div class="parent">
+                  A
+                  <div class="frist-child">B</div>
+                  <div class="second-child">C</div>
+                </div>
                 <!-- positions-02 -->
               </div>
             </div>
@@ -198,6 +268,11 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="positions-03">
+                <div class="parent">
+                  A
+                  <div class="frist-child">B</div>
+                  <div class="second-child">C</div>
+                </div>
                 <!-- positions-03 -->
               </div>
             </div>
@@ -215,6 +290,8 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="mediaqueries-01">
+                <p>Trajectoire</p>
+                <p class="artiste">Nepal</p>
                 <!-- mediaqueries-01 -->
               </div>
             </div>
@@ -230,6 +307,11 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="mediaqueries-02">
+                <div class="flexbox-container">
+                  <p>A</p>
+                  <p>B</p>
+                  <p>C</p>
+                </div>
                 <!-- mediaqueries-02 -->
               </div>
             </div>
@@ -245,6 +327,8 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="mediaqueries-03">
+                <a class="burger-menu" href="">menu</a>
+                <p class="navigation">lien 1 lien 2 lien 3</p>
                 <!-- mediaqueries-03 -->
               </div>
             </div>
