--- a/src/index.html
+++ b/src/index.html
@@ -349,6 +349,7 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="transitions-01">
+                <p class="button">paradise</p>
                 <!-- transitions-01 -->
               </div>
             </div>
@@ -361,6 +362,9 @@
           <div class="l-row">
             <div class="l-col-6">
               <div class="l-exercice" id="transitions-02">
+                <div class="box">
+                  <p class="button">paradise</p>
+                </div>
                 <!-- transitions-02 -->
               </div>
             </div>
